[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/mainMenu/button_1_idle1.png" type="Texture" id=1]
[ext_resource path="res://assets/mainMenu/title.png" type="Texture" id=2]
[ext_resource path="res://assets/mainMenu/button_1_idle7.png" type="Texture" id=3]
[ext_resource path="res://levels/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://levels/Level1.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/mainMenu/button_1_idle6.png" type="Texture" id=6]
[ext_resource path="res://assets/mainMenu/button_1_idle2.png" type="Texture" id=7]
[ext_resource path="res://assets/mainMenu/tutorial.png" type="Texture" id=8]
[ext_resource path="res://assets/mainMenu/button_1_idle8.png" type="Texture" id=9]
[ext_resource path="res://levels/Tutorial1.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/mainMenu/button_1_idle5.png" type="Texture" id=11]
[ext_resource path="res://assets/mainMenu/button_1_idle4.png" type="Texture" id=12]
[ext_resource path="res://assets/mainMenu/button_1_idle3.png" type="Texture" id=13]
[ext_resource path="res://assets/mainMenu/background2.png" type="Texture" id=14]
[ext_resource path="res://levels/Level2.tscn" type="PackedScene" id=15]
[ext_resource path="res://levels/Level3.tscn" type="PackedScene" id=16]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )
level1 = ExtResource( 5 )
level2 = ExtResource( 15 )
level3 = ExtResource( 16 )
level4 = ExtResource( 5 )
tutorial = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 576.0
margin_bottom = 320.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLvl1" type="TextureButton" parent="."]
margin_left = 127.143
margin_top = 100.287
margin_right = 262.143
margin_bottom = 184.287
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLvl2" type="TextureButton" parent="."]
margin_left = 320.0
margin_top = 102.002
margin_right = 455.0
margin_bottom = 186.002
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLvl3" type="TextureButton" parent="."]
margin_left = 126.371
margin_top = 198.516
margin_right = 261.371
margin_bottom = 282.516
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLvl4" type="TextureButton" parent="."]
margin_left = 320.0
margin_top = 198.516
margin_right = 455.0
margin_bottom = 282.516
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnTutorial" type="TextureButton" parent="."]
margin_left = 168.0
margin_top = 288.0
margin_right = 411.0
margin_bottom = 319.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 88.0
margin_top = 8.0
margin_right = 528.0
margin_bottom = 92.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BtnLvl1" to="." method="_on_BtnLvl1_pressed"]
[connection signal="pressed" from="BtnLvl2" to="." method="_on_BtnLvl2_pressed"]
[connection signal="pressed" from="BtnLvl3" to="." method="_on_BtnLvl3_pressed"]
[connection signal="pressed" from="BtnLvl4" to="." method="_on_BtnLvl4_pressed"]
[connection signal="pressed" from="BtnTutorial" to="." method="_on_BtnTutorial_pressed"]
